# logdoc

./: Cargo.toml  Readme.md  debug.md  info.md
.github/workflows/: rust.yml
src/: app.rs  args.rs  files.rs  language.rs  lib.rs  main.rs  meta.rs  queries.rs  template.rs
tests/: main.go  main2.go  main3.go  main4.go  main7.go
tests/go/: main.go  main1.go  main5.go  main6.go
tests/python/: main.py
tests/ruby/: file.rb
