[package]
name = "logdoc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive", "env"] }
tree-sitter = "0.22.6"
tree-sitter-go = "0.21.0"
tree-sitter-python = "0.21.0"
tree-sitter-rust = "0.21.2"
tree-sitter-cpp = "0.22.2"
tree-sitter-c = "0.21.4"
tree-sitter-java = "0.21.0"
tree-sitter-javascript = "0.21.4"
tree-sitter-ruby = "0.21.0"
walkdir = "2.5.0"
csv = "1.3.0"
